--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "landing page for natours",
   "main": "index.php",
   "scripts": {
-    "watch:sass": "node-sass sass/main.scss css/style.css -w"
+    "compile:sass": "node-sass sass/main.scss css/style.css"
   },
   "author": "Your Name",
   "license": "ISC",
